<resources>
    <string name="app_name">iTraveller</string>
    <string name="user_name">User name:</string>
    <string name="user_password">Password:</string>
    <string name="login_btn">LOGIN</string>
    <string name="new_account_btn">Create new account</string>
    <string name="no_account_create">No Account Yet? Create an Account</string>

    <string name="register">Register</string>
    <string name="create_user">User Name</string>
    <string name="create_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup_btn">Sign Up</string>
    <string name="delete_account">Delete Account</string>
    <string name="api_key">AIzaSyA56SPjWPDegiQPfZgQBofAgd5TwCMej6E</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>